--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,38 @@
+@import "./styles/color.css";
+
+*,
+::before,
+::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+/* body,
+html {
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+} */
+
 .App {
   text-align: center;
+  height: 100vh;
+  position: relative;
+  display: grid;
+  grid-template-columns: [width] 100vw;
+  grid-template-rows: [main] auto [footer] 60px;
+}
+
+.main-content {
+  grid-row: main;
+  overflow-y: scroll;
+  background-color: var(--color-blue);
+  align-items: center;
+}
+
+.Footer {
+  grid-row: footer;
+  background-color: var(--color-blue);
 }
