Add functionality to fetch CO2 estimates for flight and Car ride and adding flights to local storage and My Trips page

--- a/src/components/AddCarTripForm.css
+++ b/src/components/AddCarTripForm.css
@@ -37,3 +37,17 @@
   font-family: "Helvetica Neue", sans-serif;
   border: none;
 }
+
+.add-car-addtrip-button {
+  width: 210px;
+  height: 47px;
+  margin: 10px;
+  background-color: var(--color-purple);
+  border-radius: 25px;
+  font-family: "Helvetica Neue", sans-serif;
+  border: none;
+}
+
+.add-car-emission-paragraph {
+  color: var(--color-white);
+}
