--- a/src/components/AddFlightForm.css
+++ b/src/components/AddFlightForm.css
@@ -49,3 +49,7 @@
   font-family: "Helvetica Neue", sans-serif;
   border: none;
 }
+
+.add-flight-emission-paragraph {
+  color: var(--color-white);
+}
