fixed some classes and classnames, cleaned and corrected in code

--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,8 @@
   grid-row: footer;
   background-color: var(--color-blue);
 }
+
+h1 {
+  color: var(--color-white);
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
