--- a/src/components/TripItem.css
+++ b/src/components/TripItem.css
@@ -1,12 +1,24 @@
 .trip-item {
   display: flex;
   flex-direction: row;
-  height: 100px;
+  /* height: 100px; */
   border-radius: 10px;
   width: 280px;
   background-color: var(--color-white);
   color: var(--color-blue);
   box-shadow: 2px -2px 4px var(--color-white);
+  animation: move-up 1s ease-in-out 1;
+}
+
+@keyframes move-up {
+  from {
+    transform: translateY(500px);
+    opacity: 0.1;
+  }
+  to {
+    transform: translateY(0px);
+    opacity: 0.9;
+  }
 }
 
 .trip-container {
@@ -35,4 +47,5 @@
 }
 
 .paragraph {
+  font-size: 1.2rem;
 }
