--- a/src/components/Triplist.css
+++ b/src/components/Triplist.css
@@ -1,3 +1,11 @@
+.trip-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  font-size: 14px;
+}
+
 .Triplist-button {
   width: 110px;
   height: 47px;
