Changes to styling, add sum of CO2 to chart, create Header component

--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,8 @@
   height: 100vh;
   position: relative;
   display: grid;
+
+  /* font-family: "Courier New", Courier, monospace; */
   grid-template-columns: [width] 100vw;
   grid-template-rows: [main] auto [footer] 60px;
 }
@@ -20,13 +22,43 @@
 .main-content {
   grid-row: main;
   overflow-y: scroll;
-  background-color: var(--color-blue);
+
+  background: rgb(6, 104, 101);
+  background: linear-gradient(
+    90deg,
+    rgba(6, 104, 101, 1) 0%,
+    rgba(16, 124, 104, 1) 100%
+  );
+
+  /* background: rgb(6, 104, 101);
+  background: linear-gradient(
+    90deg,
+    rgba(6, 104, 101, 1) 0%,
+    rgba(16, 124, 104, 1) 85%,
+    rgba(25, 146, 106, 1) 100%
+  ); */
+
+  /* background: #4d7c71; */
+  /* background: rgb(14, 120, 102);
+  background: linear-gradient(
+    90deg,
+    rgba(14, 120, 102, 1) 0%,
+    rgba(19, 130, 104, 1) 35%,
+    rgba(18, 128, 103, 1) 100%
+  ); */
   align-items: center;
 }
 
 .Footer {
   grid-row: footer;
-  background-color: var(--color-blue);
+  background: rgb(6, 104, 101);
+  background: linear-gradient(
+    90deg,
+    rgba(6, 104, 101, 1) 0%,
+    rgba(16, 124, 104, 1) 100%
+  );
+  /* background: #faffe4; */
+  /* background: #4d7c71; */
 }
 
 h1 {
