--- a/src/components/FilterButton.css
+++ b/src/components/FilterButton.css
@@ -2,7 +2,8 @@
   width: 110px;
   height: 47px;
   margin: 10px;
-  background-color: var(--color-purple);
+
+  background-color: #3ab19c;
   border-radius: 25px;
   font-family: "Helvetica Neue", sans-serif;
   border: none;
