--- a/src/components/AddTrip.css
+++ b/src/components/AddTrip.css
@@ -1,9 +1,11 @@
-.add-car-header {
-  margin: 0px;
+.Header {
+  padding: 20px;
+}
+.add-trip-header {
 }
 
 .add-trip {
-  background-image: url("../images/Background-image.png");
+  /* background-image: url("../images/Background-image.png");
   background-size: cover;
-  height: 100%;
+  height: 100%; */
 }
