--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -5,7 +5,7 @@
   justify-content: space-around;
   justify-self: center;
   border-radius: 20px 20px 0 0;
-  background-color: var(--color-white);
+  background-color: whitesmoke;
   width: 100%;
   height: 100%;
 }
