--- a/src/components/SummaryCard.css
+++ b/src/components/SummaryCard.css
@@ -1,14 +1,21 @@
 .summary-card {
-  height: 300px;
-  width: 300px;
-  background-color: var(--color-white);
-  border-radius: 10px;
-  box-shadow: 2px 2px 8px var(--color-white);
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  height: 400px;
+  width: 300px;
+  margin: 20px;
+  /* background-color: whitesmoke;
+  border-radius: 10px;
+  box-shadow: 2px 2px 8px var(--color-white); */
+  color: whitesmoke;
+  border-radius: 50px;
+  background: linear-gradient(145deg, #055f5b, #06716c);
+  box-shadow: 20px 20px 60px #055a56, -20px -20px 60px #077a74;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .period-select-box {
-  height: 10px;
+  height: 20px;
   width: 100px;
 }
