Updates to summary page and calculation so localStorage initializes if its empty, fix errors with addCarTrip form, work around to make select boxes required and changed button styling

--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,13 @@
   height: 100vh;
   position: relative;
   display: grid;
-
   /* font-family: "Courier New", Courier, monospace; */
   grid-template-columns: [width] 100vw;
   grid-template-rows: [main] auto [footer] 60px;
 }
-
+.Header {
+  grid-row: header;
+}
 .main-content {
   grid-row: main;
   overflow-y: scroll;
