--- a/src/components/AddTrip.css
+++ b/src/components/AddTrip.css
@@ -1,11 +1,20 @@
 .Header {
   padding: 20px;
 }
-.add-trip-header {
-}
 
 .add-trip {
-  /* background-image: url("../images/Background-image.png");
-  background-size: cover;
-  height: 100%; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 100%;
+}
+
+.filter-button-container {
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  top: 80px;
+  width: 100%;
+  justify-content: center;
+  /* z-index: 2; */
 }
