--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,10 +1,5 @@
-.tripList-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.h1-class {
-  color: var(--color-white);
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+.home-container {
+  background-image: url("../images/background-sky.jpg");
+  background-size: cover;
+  height: 100%;
 }
