--- a/src/components/Triplist.css
+++ b/src/components/Triplist.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  padding-top: 160px;
   font-size: 14px;
 }
 
@@ -20,4 +21,12 @@
   display: flex;
   flex-direction: row;
   position: absolute;
+  top: 80px;
+  z-index: 2;
+  /* background: rgb(6, 104, 101);
+  background: linear-gradient(
+    90deg,
+    rgba(6, 104, 101, 1) 0%,
+    rgba(16, 124, 104, 1) 100%
+  ); */
 }
