--- a/src/components/AddTrip.css
+++ b/src/components/AddTrip.css
@@ -11,10 +11,11 @@
 
 .filter-button-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   position: absolute;
   top: 80px;
   width: 100%;
   justify-content: center;
+  align-items: center;
   /* z-index: 2; */
 }
