--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -18,3 +18,16 @@
   box-shadow: rgba(0, 0, 0, 0.4) 0px 30px 90px;
   /* 20px 20px 60px #035752, -20px -20px 60px #057570; */
 }
+
+.btn-back {
+  width: 110px;
+  height: 47px;
+  margin: 10px;
+  margin-top: 80px;
+  background-color: #3ab19c;
+  border-radius: 25px;
+  font-family: "Helvetica Neue", sans-serif;
+  border: none;
+  transition: background-color 0.5s;
+  transition: color 0.2s;
+}
