--- a/src/components/AddBusForm.css
+++ b/src/components/AddBusForm.css
@@ -1,4 +1,4 @@
-.add-train {
+.add-bus {
   display: flex;
   flex-flow: column;
   height: 100%;
@@ -8,7 +8,7 @@
   gap: 30px;
 }
 
-.add-train-form {
+.add-bus-form {
   display: flex;
   flex-flow: column;
   position: absolute;
@@ -51,6 +51,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  align-items: flex-start;
 }
 
 .calculate-button-container {
