--- a/src/components/AddFlightForm.css
+++ b/src/components/AddFlightForm.css
@@ -1,13 +1,18 @@
 .add-flight {
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: column;
+  height: 100%;
+  width: 100vw;
+  justify-content: space-around;
+  align-items: center;
+  gap: 30px;
 }
 .add-flight-form {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   position: absolute;
   top: 80px;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -19,13 +24,13 @@
 }
 
 .add-flight-passengers {
-  text-indent: 4px;
-  border: none;
-  border-radius: 5px;
-  padding: 5px;
   height: 30px;
   width: 150px;
-  box-shadow: 2px 2px 4px;
+  border-radius: 5px;
+  border: none;
+  text-indent: 4px;
+  padding: 5px;
+  box-shadow: 2px 2px 4px whitesmoke;
 }
 
 .add-flight-datepicker {
@@ -34,7 +39,7 @@
   border-radius: 5px;
   border: none;
   text-indent: 4px;
-  box-shadow: 2px 2px 4px;
+  box-shadow: 2px 2px 4px whitesmoke;
 }
 
 .select-box-container {
