--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -1,13 +1,15 @@
 .navigation-bar {
   display: flex;
-  position: fixed;
+  position: absolute;
+  bottom: 0;
   padding: 10px;
   justify-content: space-around;
   justify-self: center;
   border-radius: 20px 20px 0 0;
   background-color: whitesmoke;
   width: 100%;
-  height: 100%;
+  height: 60px;
+  z-index: 2;
 }
 
 .selected {
