--- a/src/components/Summary.css
+++ b/src/components/Summary.css
@@ -1,8 +1,17 @@
-.summary-header {
-  padding: 20px;
+.summary {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+  width: 100vw;
+  justify-content: space-around;
+  align-items: center;
+  gap: 30px;
 }
 
 .summary-content {
   display: flex;
-  justify-content: center;
+  flex-flow: column;
+  position: absolute;
+  top: 80px;
+  justify-content: space-around;
 }
