--- a/src/components/AddTrip.css
+++ b/src/components/AddTrip.css
@@ -2,6 +2,20 @@
   padding: 20px;
 }
 
+.green-layer {
+  position: fixed;
+  top: 0px;
+  height: 70px;
+  width: 100%;
+  z-index: 2;
+  border-radius: 0 0 20px 20px;
+  background: linear-gradient(
+    90deg,
+    rgba(6, 104, 101, 1) 0%,
+    rgba(16, 124, 104, 1) 100%
+  );
+}
+
 .add-trip {
   display: flex;
   flex-direction: column;
@@ -13,7 +27,8 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  top: 80px;
+  top: 120px;
+  gap: 20px;
   width: 100%;
   justify-content: center;
   align-items: center;
