--- a/src/components/FilterButton.css
+++ b/src/components/FilterButton.css
@@ -1,24 +1,24 @@
 .filter-button {
-  width: 110px;
+  width: 150px;
   height: 47px;
   margin: 10px;
   background-color: #3ab19c;
   border-radius: 25px;
   font-family: "Helvetica Neue", sans-serif;
   border: none;
-  transition: background-color 0.5s;
+  transition: background-color 0.2s;
   transition: color 0.2s;
   cursor: pointer;
 }
-.filter-button :hover {
+.filter-button:active {
   background-color: #077a74;
   color: whitesmoke;
 }
-
-.filter-button:active {
+/* #077a74 */
+/* .filter-button:active {
   border: whitesmoke solid 1px;
   color: whitesmoke;
-}
+} */
 /* .filter-button:focus {
   background-color: blue;
 } */
