--- a/src/components/MyTrips.css
+++ b/src/components/MyTrips.css
@@ -1,7 +1,21 @@
+.green-layer {
+  position: fixed;
+  height: 70px;
+  width: 100%;
+  z-index: 2;
+  border-radius: 0 0 20px 20px;
+  background: linear-gradient(
+    90deg,
+    rgba(6, 104, 101, 1) 0%,
+    rgba(16, 124, 104, 1) 100%
+  );
+}
+
 .tripList-container {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding-top: 20px;
 }
 
 .h1-class {
