--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   height: 100vh;
   position: relative;
   display: grid;
-  /* font-family: "Courier New", Courier, monospace; */
+  font-family: Arial, Helvetica, sans-serif;
   grid-template-columns: [width] 100vw;
   grid-template-rows: [main] auto;
   /* background: rgb(6, 104, 101); */
@@ -27,6 +27,7 @@
 .main-content {
   grid-row: main;
   overflow-y: scroll;
+  align-items: center;
   box-shadow: inset 0px 10px 10px rgba(0, 0, 0, 0.9);
   /* background: rgb(6, 104, 101); */
   background: linear-gradient(
@@ -34,11 +35,4 @@
     rgba(6, 104, 101, 1) 0%,
     rgba(16, 124, 104, 1) 100%
   );
-
-  align-items: center;
-}
-
-h1 {
-  color: var(--color-white);
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
