--- a/src/components/AddFlightForm.css
+++ b/src/components/AddFlightForm.css
@@ -47,15 +47,13 @@
   flex-direction: column;
   padding: 20px;
   gap: 20px;
+  align-items: center;
 }
 
-.add-flight-airport-input {
-  margin: 20px;
-  height: 30px;
-  width: 150px;
-  border-radius: 10px;
-  border: none;
-  text-indent: 4px;
+.select-input {
+  /* padding: 20px; */
+  width: 250px;
+  padding: 0px;
   box-shadow: 2px 4px 4px;
 }
 
@@ -67,23 +65,6 @@
   top: 270px;
 }
 
-.add-flight-addtrip-button {
-  width: 210px;
-  height: 47px;
-  margin: 10px;
-  background-color: var(--color-purple);
-  border-radius: 25px;
-  font-family: "Helvetica Neue", sans-serif;
-  border: none;
-}
-
 .add-flight-emission-paragraph {
   color: var(--color-white);
-}
-
-.select-class {
-  padding: 20px;
-  width: 250px;
-  padding: 0px;
-  box-shadow: 2px 4px 4px;
 }
