--- a/src/components/EmptyTripList.css
+++ b/src/components/EmptyTripList.css
@@ -1,14 +1,35 @@
 .empty-state-add-button {
-  border: none;
+  /* border: none;
   width: 80px;
   height: 80px;
   border-radius: 24px;
   /* background: #41cd8c; */
-  cursor: pointer;
+  /* cursor: pointer;
   border-radius: 50px;
   border-radius: 24px;
   background: linear-gradient(145deg, #0c7d6e, #0a695d);
-  box-shadow: 9px 9px 18px #096358, -9px -9px 18px #0d8776;
+  box-shadow: 9px 9px 18px #096358, -9px -9px 18px #0d8776; */
+  width: 200px;
+  height: 47px;
+  margin: 10px;
+  background-color: #3ab19c;
+  border-radius: 25px;
+  border: none;
+  transition: background-color 0.1s;
+  transition: color 0.2s ease-out;
+  cursor: pointer;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+  /* box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
+    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px; */
+  /* box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 1px 0px inset,
+    rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
+}
+
+.empty-state-add-button:active {
+  background-color: #077a74;
+  color: whitesmoke;
 }
 
 .empty-plus-icon {
