--- a/src/components/SummaryCard.css
+++ b/src/components/SummaryCard.css
@@ -16,6 +16,10 @@
 }
 
 .period-select-box {
-  height: 20px;
-  width: 100px;
+  height: 30px;
+  width: 150px;
+  border-radius: 5px;
+  border: none;
+  text-indent: 4px;
+  box-shadow: 1px 1px 4px whitesmoke;
 }
