--- a/src/components/AddFlightForm.css
+++ b/src/components/AddFlightForm.css
@@ -11,9 +11,11 @@
   display: flex;
   flex-direction: column;
   position: absolute;
+  height: 300px;
   top: 80px;
   justify-content: space-evenly;
   align-items: center;
+  padding-bottom: 20px;
 }
 
 .passenger-date-container {
@@ -51,18 +53,16 @@
 }
 
 .select-input {
-  /* padding: 20px; */
+  padding: 5px;
   width: 250px;
-  padding: 0px;
   box-shadow: 2px 4px 4px;
 }
 
 .estimate-add-button-container {
   display: flex;
   flex-direction: column;
-  position: relative;
   align-items: center;
-  top: 270px;
+  padding-top: 80px;
 }
 
 .add-flight-emission-paragraph {
