--- a/src/components/AddFlightForm.css
+++ b/src/components/AddFlightForm.css
@@ -10,8 +10,7 @@
 .add-flight-form {
   display: flex;
   flex-direction: column;
-  position: absolute;
-  height: 300px;
+  position: fixed;
   top: 80px;
   justify-content: space-evenly;
   align-items: center;
@@ -58,11 +57,15 @@
   box-shadow: 2px 4px 4px;
 }
 
-.estimate-add-button-container {
+.flight-estimate-add-button-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 80px;
+  padding-top: 20px;
+}
+
+.hide-container {
+  display: none;
 }
 
 .add-flight-emission-paragraph {
