--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,13 @@
   font-family: Arial, Helvetica, sans-serif;
   grid-template-columns: [width] 100vw;
   grid-template-rows: [main] auto;
-  /* background: rgb(6, 104, 101); */
-  background: linear-gradient(
+  background: #056865;
+  /* rgb(6, 104, 101); */
+  /* background: linear-gradient(
     90deg,
     rgba(6, 104, 101, 1) 0%,
     rgba(16, 124, 104, 1) 100%
-  );
+  ); */
 }
 
 .main-content {
@@ -29,10 +30,11 @@
   overflow-y: scroll;
   align-items: center;
   box-shadow: inset 0px 10px 10px rgba(0, 0, 0, 0.9);
-  /* background: rgb(6, 104, 101); */
-  background: linear-gradient(
+  background: #056865;
+  /* rgb(6, 104, 101); */
+  /* background: linear-gradient(
     90deg,
     rgba(6, 104, 101, 1) 0%,
     rgba(16, 124, 104, 1) 100%
-  );
+  ); */
 }
