--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -5,11 +5,12 @@
   width: 100%;
   z-index: 2;
   border-radius: 0 0 20px 20px;
-  background: linear-gradient(
+  background: #056865;
+  /* background: linear-gradient(
     90deg,
     rgba(6, 104, 101, 1) 0%,
     rgba(16, 124, 104, 1) 100%
-  );
+  ); */
 }
 
 .header {
