--- a/src/components/AddTrainForm.css
+++ b/src/components/AddTrainForm.css
@@ -40,6 +40,14 @@
   text-indent: 4px;
   box-shadow: 1px 1px 4px whitesmoke;
 }
+.train-passenger-input {
+  height: 30px;
+  width: 150px;
+  border-radius: 5px;
+  border: none;
+  text-indent: 4px;
+  box-shadow: 1px 1px 4px whitesmoke;
+}
 
 .passenger-radio-button-container {
   display: flex;
@@ -51,6 +59,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+}
+.radio-text {
+  color: whitesmoke;
 }
 
 .calculate-button-container {
