--- a/src/components/AddCarTripForm.css
+++ b/src/components/AddCarTripForm.css
@@ -64,8 +64,8 @@
 .estimate-add-button-container {
   display: flex;
   flex-direction: column;
-  padding-top: 80px;
-  position: relative;
+  padding-top: 20px;
+  /* position: relative; */
   align-items: center;
   top: 270px;
 }
@@ -74,6 +74,6 @@
   color: var(--color-white);
 }
 
-.back-button-wrapper {
-  padding-top: 40px;
+.hide-container {
+  display: none;
 }
